# catkin_ws_mrs_net_stabilization

./: README.md  gain_tuning.xml  test_layout.xml
src/mrs_uav_controllers_cac/: CMakeLists.txt  package.xml  plugins.xml
src/mrs_uav_controllers_cac/cfg/: Se3Controller_CAC.cfg
src/mrs_uav_controllers_cac/config/private/: se3_controller_CAC.yaml
src/mrs_uav_controllers_cac/config/public/: se3_controller_CAC.yaml
src/mrs_uav_controllers_cac/include/: common.h  pid.hpp
src/mrs_uav_controllers_cac/scripts/: get_public_params.py
src/mrs_uav_controllers_cac/src/: changes.txt  common.cpp  se3_controller_CAC.cpp
src/mrs_uav_controllers_cac/test/modalities/: CMakeLists.txt
src/mrs_uav_controllers_cac/test/modalities/config/: custom_config_se3_controller.yaml
src/mrs_uav_controllers_cac/tmux/: session.yml  tmux.sh
src/mrs_uav_controllers_cac/tmux/config/: custom_config.yaml  world_config.yaml
src/pratik_2_mynode/: CMakeLists.txt  package.xml  packageInfo.mat
src/pratik_2_mynode/include/pratik_2_mynode/: Subscriber.h  mlroscpp_msgconvert_utils.h  pause.h  pratik_2_myNode.h  pratik_2_myNode_data.h  pratik_2_myNode_initialize.h  pratik_2_myNode_terminate.h  pratik_2_myNode_types.h  ros_structmsg_conversion.h  ros_structmsg_declare.h  rtwtypes.h  validate_print_arguments.h  visibility_control.h
src/pratik_2_mynode/src/: Subscriber.cpp  geometry_msgs_PointStruct.cpp  main.cpp  pause.cpp  pratik_2_myNode.cpp  pratik_2_myNode_data.cpp  pratik_2_myNode_initialize.cpp  pratik_2_myNode_terminate.cpp  ros_structmsg_conversion.cpp  rtw_proj.tmw  validate_print_arguments.cpp
src/pratik_controller_mrs_net_control_link_only/: CMakeLists.txt  package.xml  plugins.xml
src/pratik_controller_mrs_net_control_link_only/cfg/: controller_mrs_net_control_link_only.cfg
src/pratik_controller_mrs_net_control_link_only/config/: controller_mrs_net_control_link_only.yaml
src/pratik_controller_mrs_net_control_link_only/include/: pid.hpp
src/pratik_controller_mrs_net_control_link_only/src/: controller_mrs_net_control_link_only.cpp
src/pratik_controller_mrs_net_control_link_only/tmux/config/: custom_config.yaml
src/pratik_controller_mrs_net_free_ends/: CMakeLists.txt  package.xml  plugins.xml
src/pratik_controller_mrs_net_link_constraint_free_ends/: CMakeLists.txt  package.xml  plugins.xml
src/pratik_sim_mrs_net_free_ends/: CMakeLists.txt  nodelets.xml  package.xml  plugins.xml
src/pratik_sim_mrs_net_free_ends/cfg/: sim_mrs_net_free_ends.cfg
src/pratik_sim_mrs_net_free_ends/config/: sim_mrs_net_free_ends.yaml
src/pratik_sim_mrs_net_free_ends/config/uavs/: x500_pratik_sim_mrs_net_free_ends.yaml
src/pratik_sim_mrs_net_free_ends/include/pratik_sim_mrs_net_free_ends/: uav_system_ros.h
src/pratik_sim_mrs_net_free_ends/include/pratik_sim_mrs_net_free_ends/uav_system/: sim_mrs_net_free_ends.hpp  uav_system.hpp
src/pratik_sim_mrs_net_free_ends/include/pratik_sim_mrs_net_free_ends/uav_system/controllers/: acceleration_controller.hpp  attitude_controller.hpp  mixer.hpp  pid.hpp  position_controller.hpp  rate_controller.hpp  references.hpp  velocity_controller.hpp
src/pratik_sim_mrs_net_free_ends/launch/: hw_api.launch  sim_mrs_net_free_ends.launch
src/pratik_sim_mrs_net_free_ends/scripts/: get_public_params.py
src/pratik_sim_mrs_net_free_ends/src/: sim_mrs_net_free_ends.cpp  uav_system_ros.cpp
src/pratik_sim_mrs_net_free_ends/tmux/: custom.rviz  session.yml
src/pratik_sim_mrs_net_free_ends/tmux/config/: custom_config.yaml
src/pratik_sim_n_link_constraint/: CMakeLists.txt  nodelets.xml  package.xml  plugins.xml
src/pratik_sim_n_link_constraint/cfg/: multirotor_simulator.cfg
src/pratik_sim_n_link_constraint/include/mrs_multirotor_simulator/: uav_system_ros.h
src/pratik_sim_n_link_constraint/include/mrs_multirotor_simulator/uav_system/: multirotor_model.hpp  multirotor_model_cable_suspended_load.hpp  uav_system.hpp
src/pratik_sim_n_link_constraint/include/mrs_multirotor_simulator/uav_system/controllers/: acceleration_controller.hpp  attitude_controller.hpp  mixer.hpp  pid.hpp  position_controller.hpp  rate_controller.hpp  references.hpp  velocity_controller.hpp
src/pratik_sim_n_link_constraint/launch/: hw_api.launch  multirotor_simulator.launch  multirotor_simulator_with_cable_suspended_load.launch
src/pratik_sim_n_link_constraint/scripts/: get_public_params.py
src/pratik_sim_n_link_constraint/src/: multirotor_simulator.cpp  uav_system_ros.cpp
src/pratik_sim_n_link_constraint/tmux/Quad_single_link/: custom.rviz  session.yml
src/pratik_sim_n_link_constraint/tmux/Quad_single_link/config/: custom_config.yaml
src/pratik_sim_n_link_constraint/tmux/mrs_one_drone/: session.yml
src/pratik_sim_n_link_constraint/tmux/mrs_one_drone/config/: custom_config.yaml
src/pratik_sim_one_drone/: nodelets.xml  (+3 more)
src/pratik_sim_one_link_constraint/: CMakeLists.txt  nodelets.xml  package.xml  plugins.xml
src/pratik_sim_one_link_constraint/cfg/: sim_one_link_constraint.cfg
src/pratik_sim_one_link_constraint/config/: hw_api.yaml  sim_one_link_constraint.yaml  uavs.yaml
src/pratik_sim_one_link_constraint/config/uavs/: x500_pratik_sim_one_link_constraint.yaml
src/pratik_sim_one_link_constraint/include/pratik_sim_one_link_constraint/: uav_system_ros.h
src/pratik_sim_one_link_constraint/include/pratik_sim_one_link_constraint/uav_system/: sim_one_link_constraint.hpp  uav_system.hpp
src/pratik_sim_one_link_constraint/include/pratik_sim_one_link_constraint/uav_system/controllers/: acceleration_controller.hpp  attitude_controller.hpp  mixer.hpp  pid.hpp  position_controller.hpp  rate_controller.hpp  references.hpp  velocity_controller.hpp
src/pratik_sim_one_link_constraint/launch/: hw_api.launch  sim_one_link_constraint.launch
src/pratik_sim_one_link_constraint/scripts/: get_public_params.py
src/pratik_sim_one_link_constraint/src/: sim_one_link_constraint.cpp  uav_system_ros.cpp
src/pratik_sim_one_link_constraint/tmux/: custom.rviz  session.yml
src/pratik_sim_one_link_constraint/tmux/config/: custom_config.yaml  gain_tuning.xml  simulator.yaml  world_config.yaml
(+152 files in other folders)
